# ai-slides-mcp

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  NOTICE  README.md  VENDOR_REV  install.ps1  install.sh  pyproject.toml
docs/: styles.md
docs/plans/: 2026-06-06-ai-slides-mcp.md
docs/specs/: 2026-06-06-ai-slides-mcp-design.md
scripts/: update-vendor.ps1  update-vendor.sh
src/cgimg/: _vendor_path.py  cli.py  cli_accounts.py  console.py  server.py  sizes.py  types.py
src/cgimg/_vendor/services/: account_service.py  config.py  proxy_service.py
src/cgimg/_vendor/services/storage/: factory.py
src/cgimg/auth/: oauth_login.py  pool.py  probe.py  reset_at.py  store.py  tokens.py
src/cgimg/branding/: colors.py  composite.py  deck.py
src/cgimg/engine/: account_wiring.py  decks.py  enhance.py  enhance_templates.py  generate.py  image_thinking.py
src/cgimg/ppt/: builder.py
tests/: test_branding.py  test_cli.py  test_cli_accounts.py  test_console.py  test_deck_partial.py  test_enhance.py  test_generate_collect.py  test_oauth_login.py  test_pool.py  test_ppt_builder.py  test_reset_at.py  test_server.py  test_shim_wiring.py  test_sizes.py  test_store.py  test_styled_deck.py  test_tokens.py  test_vendor_contract.py  test_vendor_import.py
