[project]
name = "cgimg"
version = "0.1.0"
description = "Standalone MCP server for ChatGPT image generation + PPT building"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "curl_cffi>=0.7.0",
    "pillow>=10.0.0",
    "pybase64>=1.3.0",
    "python-pptx>=1.0.0",
    "tiktoken>=0.7.0",
    "fastapi>=0.110.0",
]

[project.scripts]
cgimg = "cgimg.cli:main"
cgimg-mcp = "cgimg.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cgimg"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
# Only collect this project's tests. Keeps the upstream checkout under scratch/
# (used by scripts/update-vendor.sh) out of collection.
testpaths = ["tests"]
